Fix DO deploy: use rocker/shiny base image and robust app startup

--- a/lab/Dockerfile
+++ b/lab/Dockerfile
@@ -1,4 +1,4 @@
-FROM rocker/r-ver:4.3.3
+FROM rocker/shiny:4.3.3
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libcurl4-openssl-dev \
@@ -7,7 +7,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     ca-certificates \
     && rm -rf /var/lib/apt/lists/*
 
-RUN R -e "install.packages(c('shiny','bslib','DT','httr','jsonlite','dplyr','purrr','readr','tidyr','ggplot2'), repos='https://cloud.r-project.org')"
+RUN R -e "install.packages(c('bslib','DT','httr','jsonlite','dplyr','purrr','readr','tidyr','ggplot2'), repos='https://cloud.r-project.org', dependencies=TRUE)"
 
 WORKDIR /app
 COPY . /app
