Fix MRTS app: resolve table and chart display issues, improve error handling, add API key loading from .env files

--- a/lab/Dockerfile
+++ b/lab/Dockerfile
@@ -4,10 +4,18 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libcurl4-openssl-dev \
     libssl-dev \
     libxml2-dev \
+    libudunits2-dev \
+    libharfbuzz-dev \
+    libfribidi-dev \
+    libfreetype6-dev \
+    libpng-dev \
+    libjpeg-dev \
+    libtiff5-dev \
+    libfontconfig1-dev \
     ca-certificates \
     && rm -rf /var/lib/apt/lists/*
 
-RUN R -e "install.packages(c('bslib','DT','httr','jsonlite','dplyr','purrr','readr','tidyr','ggplot2'), repos='https://cloud.r-project.org', dependencies=TRUE)"
+RUN R -e "install.packages(c('shiny','bslib','DT','httr','jsonlite','dplyr','purrr','readr','tidyr','ggplot2'), repos='https://cloud.r-project.org', dependencies=c('Depends','Imports','LinkingTo'))"
 
 WORKDIR /app
 COPY . /app
